# esync

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  esync.test.yaml  esync.yaml  esync_integration_test_plan.docx
.github/workflows/: integration-tests.yml  release.yml  sap-mm-integration-tests.yml
docs/: oauth2-rls-guide.md
examples/: README.md  datastream-template.json  ilm-policy.json  search-products.json  template.json
examples/keycloak/: README.md  esync-keycloak.yaml  keycloak_cc.hurl  keycloak_user.hurl
examples/sap-mm/: README.md  docker-compose.yml  esync-sap-mm.test.yaml  esync-sap-mm.yaml
examples/sap-mm/scripts/: init_sap_mm.sql  setup_test_db.sql
scripts/: init.sql  rls_setup.sql
scripts/test/: gen_oauth2_tokens.py  generate_test_plan.js  rotate_jwks.py  run_integration_tests.sh  setup_test_db.sql  smoke_test.sh  write_oauth2_configs.py
src/: auth.rs  config.rs  db.rs  elastic.rs  lib.rs  main.rs
src/commands/: es.rs  index.rs  mod.rs  serve.rs  watch.rs
src/graphql/: mod.rs  mutations.rs  search.rs  subscriptions.rs
src/indexer/: mapping.rs  mod.rs  search_text.rs
tests/: test_elastic.rs  test_graphql.rs  test_index_command.rs  test_mapping.rs  test_relations.rs  test_search.rs  test_search_text.rs  test_watch_cdc.rs
tests/common/: mod.rs
tests/fixtures/: product_1.json  search_active_widgets.json
tests/oauth2/: 01_anonymous.hurl  02_user_token.hurl  03_admin_cc_token.hurl  04_tenant_reader_cc_token.hurl  05_get_by_id_rls.hurl  06_token_rejection.hurl  07_require_auth_strict.hurl  08_validation_none.hurl  09_jwks_rotation.hurl
tests/sap_mm/: common.rs  test_mm_cdc.rs  test_mm_graphql.rs  test_mm_index.rs  test_mm_search.rs
